=================================
Changes for Crate Admin Interface
=================================

Unreleased
==========
 
 - Changed read notification behaviour so that all items are marked as
   read upon opening the settings.

 - Lowered opacity of placeholder query in the console.

 - Fix Radio button position in load overview.

 - Made schema tabs more distinguishable from tables in the table list.
 
 - Updated link to support website in contact widget.

2016/12/02 1.0.1
================

 - Fixed an issue that caused incorrect URL paths if the project gets built.

2016/12/02 1.0.0
================

 - Implemented new layout for the admin-ui.

 - Local development: do not store ``base_uri`` permanently in localStorage
   but keep it in URL.

 - Added Pepper contact widget which displays various Crate.IO
   support Channels in a user friendly way.

 - The first node in the node list is selected by default.

 - The first table in the table list is selected by default.

 - Developer news from crate.io website are now loaded correctly into newsfeed.

2016/11/22 0.21.3
=================

 - fixed bug that caused the cluster REST URL link in nodes view page to be unsafe.

2016/11/03 0.21.2
=================

 - fixed incorrect sql query for creating the tweets table in the tutorial.

2016/11/02 0.21.1
=================

 - Fix : Corrected the sql queries to display the table list in the tables view.

 - Corrected the sql query in the tutorial to fix the error that occured
   when tweets table was already created.

2016/10/27 0.21.0
=================

 - Added a button to clear the search field in the table list view.

 - Added Spanish translation.

2016/10/21 0.20.4
=================

 - Fix: removed chinese language from i18n configuration.

 - Fix: added english as a fallback language for translation files.

2016/10/18 0.20.3
=================

 - Fixed broken execute button in the console view.
