@@ -10,6 +10,9 @@ Unreleased
 
  - Lowered opacity of placeholder query in the console.
 
+ - Fix intercom support that disappeared during the implementation
+   of the new admin-ui layout.
+
  - Fix Radio button position in load overview.
 
  - Made schema tabs more distinguishable from tables in the table list.
